src/domkit/fanCss/Checkbox.css
//
// Copyright (c) 2015, Brian Frank and Andy Frank
// Licensed under the Academic Free License version 3.0
//
// History:
//   10 Jul 2015  Andy Frank  Creation
//

input.domkit-Checkbox {
}

span.domkit-Checkbox-label {
  padding-left: 4px;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
}

input.domkit-Checkbox[disabled] + span.domkit-Checkbox-label {
  opacity: 0.3;
}

